--- a/styles/style.css
+++ b/styles/style.css
@@ -397,6 +397,7 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .ladno__right{
@@ -813,8 +814,10 @@ body{
 }
 
 .feedback__avatar img{
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
+    width: 60px;
+    height: 60px;
     object-fit: cover;
 }
 
