--- a/styles/style.css
+++ b/styles/style.css
@@ -30,8 +30,9 @@
 } */
 
 :root[data-theme="dark"] {
-    --color-bg: #070714; 
-    --direction-item-bg: #0e0e1c; 
+    /* --color-bg: #070714; */
+    --color-bg: #000;
+    --direction-item-bg: #000;
     --text-color: #F0F0F0;
     --service-icon-bg: #1A1A2E;
     --svg-color: #F0F0F0;
@@ -62,7 +63,7 @@ body{
 }
 
 .container{
-    width: min(1260px, 93%);
+    width: min(1260px, 90%);
     margin: 0 auto;
 }
 
@@ -252,7 +253,7 @@ body{
     .intro__section .info{
         width: 100%;
     }
-    .intro__section .title, .intro__section span{
+    .intro__section .title{
         font-size: 32px;
     }
     .intro__section .image{
@@ -397,12 +398,12 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 10px;
 }
 
 .ladno__right{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 16px;
 }
 
@@ -496,7 +497,7 @@ body{
 }
 
 .marketing__list{
-    margin: 50px 0 0 0;
+    margin: 0 0 0 0;
     display: flex;
     flex-direction: column;
     gap: 35px;
@@ -814,10 +815,8 @@ body{
 }
 
 .feedback__avatar img{
-    /* width: 100%; */
-    /* height: 100%; */
-    width: 60px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -1142,7 +1141,7 @@ body{
 
 .questions__text{
     color: var(--light-text);
-    text-transform: lowercase;
+    text-transform: capitalize;
     font-weight: 400;
     font-size: 20px;
     margin: 24px 0 30px 0;
