update styles file and impoved adaptiv 2

--- a/styles/style.css
+++ b/styles/style.css
@@ -266,8 +266,12 @@ body{
 }
 
 @media screen and (max-width: 768px) {
-    .button .pc__info{
+    .pc__info{
         display: none;
+    }
+    .button__container{
+        display: grid;
+        place-items: center;
     }
 }
 
