--- a/styles/style.css
+++ b/styles/style.css
@@ -1481,6 +1481,18 @@ body{
     gap: 24px;
 }
 
+.block__2_4 .footer__link{
+    font-size: 16px;
+}
+
+.footer__link.IP{
+    font-weight: 600;
+}
+
+.footer__link.email{
+    color: var(--main-color);
+}
+
 @media screen and (max-width: 1200px) {
     .top__block .container{
         align-items: center;
